ajustes solicitados